--- a/mall-web/pom.xml
+++ b/mall-web/pom.xml
@@ -10,8 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mall-web</artifactId>
-<dependencies>
-
+    <packaging>war</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.hzit.jc</groupId>
+            <artifactId>mall-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     <dependency>
         <groupId>javax.servlet</groupId>
