--- a/mall-dao/src/main/resources/db.properties
+++ b/mall-dao/src/main/resources/db.properties
@@ -1,4 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.1.121:3306/game
+url=jdbc:mysql://localhost:3306/game
 username=root
 password=123456
+
