--- a/mall-dao/pom.xml
+++ b/mall-dao/pom.xml
@@ -21,7 +21,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
 
 
